--- a/app/src/main/res/layout/fragment_second.xml
+++ b/app/src/main/res/layout/fragment_second.xml
@@ -36,7 +36,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView"
-        tools:text="Haloo Dunia!" />
+        tools:text="Haloo Dunia1!" />
     <TextView
         android:id="@+id/textView"
         android:layout_width="0dp"
@@ -64,7 +64,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewName"
-        tools:text="Haloo Dunia!" />
+        tools:text="Haloo Dunia2!" />
     <TextView
         android:id="@+id/textViewSandi"
         android:layout_width="0dp"
@@ -81,6 +81,6 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewEmail"
-        tools:text="Haloo Dunia!" />
+        tools:text="Haloo Dunia3!" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
